--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,13 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #Spring Security
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
-#spring.security.oauth2.client.registration.google.client-id=43693438010-bprv4raav4jtf4o0qhb9se0v4ucjqrq1.apps.googleusercontent.com
-#spring.security.oauth2.client.registration.google.client-secret=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
-#server.error.path=/error
+spring.security.oauth2.client.registration.google.client-id=43693438010-bprv4raav4jtf4o0qhb9se0v4ucjqrq1.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+server.error.path=/error
+#email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=lutruongthang2511@gmail.com
+spring.mail.password=thang25112002
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
